# safe-hook-rs

./: Cargo.toml  LICENSE  README.md
safe-hook/: Cargo.toml
safe-hook-macros/: Cargo.toml  README.md
safe-hook-macros/src/: lib.rs
safe-hook/benches/: benchmark.rs
safe-hook/examples/: add.rs  concat.rs
safe-hook/src/: lib.rs
safe-hook/tests/: add.rs  concat.rs
