[package]
name = "safe-hook-macros"
version = "0.2.1"
edition = "2024"
description = "Macros for safe-hook"
repository = "https://github.com/rick-200/safe-hook-rs"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
