[package]
name = "safe-hook"
version = "0.2.2"
edition = "2024"
description = "A safe and simple inline hook library for Rust."
keywords = ["hook"]
repository = "https://github.com/rick-200/safe-hook-rs"
license = "Apache-2.0"

[dependencies]
inventory = "0.3"
safe-hook-macros = { version = "0.2.2", path = "../safe-hook-macros" }

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

